# mesha

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  loader.lisp  mesha.asd  setup_workspace.lisp  systems.csv
application/: mesha.janet  view.janet
cpp/: SConscript  mesha.cpp  mesha.h  mesha_networking.cpp  mesha_networking.h  register_types.cpp  register_types.h  table.cpp  table.h
engine/: main.cpp  ui.cpp  ui.h  vm.cpp
frontend/: Cargo.toml  README.md  icon.svg.import  project.godot  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/mesha_frontend/: MainActivity.kt
frontend/fonts/: OpenSans-Bold.ttf.import  OpenSans-BoldItalic.ttf.import  OpenSans-Italic.ttf.import  OpenSans-Regular.ttf.import  SourceCodePro-Bold.ttf.import  SourceCodePro-BoldItalic.ttf.import  SourceCodePro-Italic.ttf.import  SourceCodePro-Regular.ttf.import
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/scenes/: main_window.tscn
frontend/scripts/: cell_editor.gd
frontend/src/: lib.rs  lib2.rs  main.rs
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
lisp/: SConscript  main.lisp  net-sys.lisp  net.lisp  package.lisp  ui.lisp
lisp/mesha-bootstrap/: SConscript  main.lisp  mesha-bootstrap.asd  package.lisp
lisp/mesha-core/: main.lisp  mesha-core.asd  package.lisp
native/: CMakeLists.txt  lib.cpp  main.cpp
notes/: mesha.org  sketchbook.rnote
schema/: message.fbs
src/: application.lisp  cell.lisp  document.lisp  main.cpp  main.lisp  mesha.janet  native.lisp  package.lisp  sdl3.lisp  ui.cpp  ui.h  ui.lisp  vm.cpp  vm.h
www/js/: mesha.js
