[package]
name = "mesha"
version = "0.1.0"
edition = "2021"

[lib]
name = "mesha"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# eframe = "0.28"
# egui = "0.28"
# iced = "0.12.1"
lru = "0.12"
rfd = "0.13"

[dependencies.iced]
version = "0.12"
features = ["tokio", "debug", "highlighter"]
